[package]
name = "payment_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version = "3", features = ["derive"]}
csv = "1.1"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1", features = ["derive"] }
